Add backers page

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -117,6 +117,14 @@
           More
         </div>
         <div id="moreDropdown" class="navbar-dropdown {% if include.boxed %}is-boxed{% endif %}">
+          <a class="navbar-item {% if page.route == 'backers' %}is-active{% endif %}" href="{{ site.url }}/backers/">
+            <p>
+              <strong>Patreon backers</strong>
+              <br>
+              <small>Everyone who is supporting Bulma</small>
+            </p>
+          </a>
+          <hr class="navbar-divider">
           <a class="navbar-item {% if page.route == 'bulma-start' %}is-active{% endif %}" href="{{ site.url }}/bulma-start/">
             <p>
               <strong>Bulma start</strong>
