--- a/docs/_sass/patreon.sass
+++ b/docs/_sass/patreon.sass
@@ -21,6 +21,9 @@
   img
     max-height: 100%
 
+.hero.bd-is-patreon
+  background-color: $patreon
+
 +from(480px)
   .bd-patreon-text
     margin-right: 1rem
