--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13289,6 +13289,10 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   max-height: 100%;
 }
 
+.hero.bd-is-patreon {
+  background-color: #f96854;
+}
+
 @media screen and (min-width: 480px) {
   .bd-patreon-text {
     margin-right: 1rem;
