--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5132,6 +5132,16 @@ a.tag:hover {
   font-weight: inherit;
 }
 
+.title sub,
+.subtitle sub {
+  font-size: 0.75em;
+}
+
+.title sup,
+.subtitle sup {
+  font-size: 0.75em;
+}
+
 .title .tag,
 .subtitle .tag {
   vertical-align: middle;
@@ -9750,7 +9760,7 @@ label.panel-block:hover {
   color: #0a0a0a;
 }
 
-.hero.is-white a:not(.button),
+.hero.is-white a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-white strong {
   color: inherit;
 }
@@ -9828,7 +9838,7 @@ label.panel-block:hover {
   color: white;
 }
 
-.hero.is-black a:not(.button),
+.hero.is-black a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-black strong {
   color: inherit;
 }
@@ -9906,7 +9916,7 @@ label.panel-block:hover {
   color: #363636;
 }
 
-.hero.is-light a:not(.button),
+.hero.is-light a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-light strong {
   color: inherit;
 }
@@ -9984,7 +9994,7 @@ label.panel-block:hover {
   color: whitesmoke;
 }
 
-.hero.is-dark a:not(.button),
+.hero.is-dark a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-dark strong {
   color: inherit;
 }
@@ -10062,7 +10072,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-primary a:not(.button),
+.hero.is-primary a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-primary strong {
   color: inherit;
 }
@@ -10140,7 +10150,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-link a:not(.button),
+.hero.is-link a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-link strong {
   color: inherit;
 }
@@ -10218,7 +10228,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-info a:not(.button),
+.hero.is-info a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-info strong {
   color: inherit;
 }
@@ -10296,7 +10306,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-success a:not(.button),
+.hero.is-success a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-success strong {
   color: inherit;
 }
@@ -10374,7 +10384,7 @@ label.panel-block:hover {
   color: rgba(0, 0, 0, 0.7);
 }
 
-.hero.is-warning a:not(.button),
+.hero.is-warning a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-warning strong {
   color: inherit;
 }
@@ -10452,7 +10462,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-danger a:not(.button),
+.hero.is-danger a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-danger strong {
   color: inherit;
 }
@@ -11416,7 +11426,7 @@ svg {
   display: block;
   height: 30px;
   line-height: 30px;
-  margin-top: 5px;
+  margin-top: 0.5rem;
 }
 
 #about small {
@@ -11449,6 +11459,7 @@ svg {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  max-width: 400px;
 }
 
 #social > iframe,
@@ -11459,7 +11470,7 @@ svg {
   font-size: 11px;
   height: 30px;
   line-height: 30px;
-  margin-top: 5px;
+  margin-top: 0.5rem;
 }
 
 #social .github-btn {
@@ -11483,6 +11494,12 @@ svg {
   display: -ms-flexbox;
   display: flex;
   width: 130px;
+}
+
+#social .bd-patreon-button {
+  height: 30px;
+  margin-right: 0.5rem;
+  width: 128px;
 }
 
 #newsletter .input {
@@ -11517,6 +11534,7 @@ svg {
 
 #alternative {
   font-size: 0.875rem;
+  margin-top: 0.5rem;
 }
 
 #alternative a {
@@ -13232,6 +13250,53 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 .bd-klmn-columns:last-child .bd-notification {
   font-size: 0.75rem;
   white-space: nowrap;
+}
+
+.bd-patreon {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #052d49;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.5rem 1rem;
+}
+
+.bd-patreon strong {
+  color: currentColor;
+}
+
+.bd-patreon-text {
+  font-size: 0.875rem;
+  line-height: 1.25;
+  margin-right: 0.5rem;
+}
+
+.bd-patreon-button {
+  display: inline-block;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  height: 34px;
+  width: 145px;
+}
+
+.bd-patreon-button img {
+  max-height: 100%;
+}
+
+.hero.bd-is-patreon {
+  background-color: #f96854;
+}
+
+@media screen and (min-width: 480px) {
+  .bd-patreon-text {
+    margin-right: 1rem;
+  }
 }
 
 /*# sourceMappingURL=bulma-docs.css.map */
