--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -1,4 +1,4 @@
-$dimensions: 16 24 32 48 64 96 128 256 512 !default
+$dimensions: 16 24 32 48 64 96 128 !default
 
 .image
   display: block
@@ -7,8 +7,6 @@ $dimensions: 16 24 32 48 64 96 128 256 512 !default
     display: block
     height: auto
     width: 100%
-    &.is-rounded
-      border-radius: $radius-rounded
   // Ratio
   &.is-square,
   &.is-1by1,
