--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -104,7 +104,7 @@ $tag-delete-margin: 1px !default
     &:active
       background-color: darken($tag-background-color, 10%)
   &.is-rounded
-    border-radius: $radius-rounded
+    border-radius: 290486px
 
 a.tag
   &:hover
