--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -38,7 +38,7 @@
   -webkit-appearance: none
   background-color: rgba($black, 0.2)
   border: none
-  border-radius: $radius-rounded
+  border-radius: 290486px
   cursor: pointer
   display: inline-block
   flex-grow: 0
@@ -144,7 +144,7 @@
 =loader
   animation: spinAround 500ms infinite linear
   border: 2px solid $border
-  border-radius: $radius-rounded
+  border-radius: 290486px
   border-right-color: transparent
   border-top-color: transparent
   content: ""
