$radius-rounded: 300000px !default

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -71,7 +71,7 @@ $help-size: $size-small !default
   max-width: 100%
   width: 100%
   &[type="search"]
-    border-radius: 290486px
+    border-radius: $radius-rounded
   &[readonly]
     box-shadow: none
   // Colors
