--- a/docs/_sass/twitter.sass
+++ b/docs/_sass/twitter.sass
@@ -38,7 +38,7 @@ $tw-grey: #697882
   margin-right: 9px
   width: 36px
   img
-    border-radius: 290486px
+    border-radius: $radius-rounded
     display: block
     height: 36px
     width: 36px
