--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -29,6 +29,10 @@ $dimensions: 16 24 32 48 64 96 128 !default
     padding-top: 56.25%
   &.is-2by1
     padding-top: 50%
+  &.is-contained
+    img
+      object-fit: contain
+      object-position: center center
   // Sizes
   @each $dimension in $dimensions
     &.is-#{$dimension}x#{$dimension}
