--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -819,7 +819,7 @@ document.addEventListener('DOMContentLoaded', function () {
           {% highlight html %}<nav class="navbar is-fixed-top">{% endhighlight %}
         </li>
         <li>
-          Add the corresponding <code>has-navbar-fixed-top</code> or <code>has-navbar-fixed-bottom</code> modifier to the <code>&lt;html&gt;</code> element to provide the appropriate padding to the page
+          Add the corresponding <code>has-navbar-fixed-top</code> or <code>has-navbar-fixed-bottom</code> modifier to either <code>&lt;html&gt;</code> or <code>&lt;body&gt;</code> element to provide the appropriate padding to the page
           {% highlight html %}<html class="has-navbar-fixed-top">{% endhighlight %}
         </li>
       </ul>
