--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -201,6 +201,8 @@ $button-static-border-color: $grey-lighter !default
     pointer-events: none
   &.is-rounded
     border-radius: $radius-rounded
+    padding-left: 1em
+    padding-right: 1em
 
 .buttons
   align-items: center
