--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -125,11 +125,13 @@ $tabs-toggle-link-active-color: $link-invert !default
         &.is-rounded
           border-top-left-radius: $radius-rounded
           border-bottom-left-radius: $radius-rounded
+          padding-left: 1.25em
       &:last-child a
         border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
         &.is-rounded
           border-top-right-radius: $radius-rounded
           border-bottom-right-radius: $radius-rounded
+          padding-right: 1.25em
       &.is-active
         a
           background-color: $tabs-toggle-link-active-background-color
