--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -679,6 +679,10 @@ table th {
   text-transform: uppercase !important;
 }
 
+.is-italic {
+  font-style: italic !important;
+}
+
 .has-text-white {
   color: white !important;
 }
@@ -13297,6 +13301,28 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   .bd-patreon-text {
     margin-right: 1rem;
   }
+}
+
+.bd-sponsors {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.bd-sponsors a {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 150px;
 }
 
 /*# sourceMappingURL=bulma-docs.css.map */
