--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -33,6 +33,14 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
     font-size: $size-medium
   &.is-large
     font-size: $size-large
+  &.is-rounded
+    .pagination-previous,
+    .pagination-next
+      padding-left: 1em
+      padding-right: 1em
+      border-radius: $radius-rounded
+    .pagination-link
+      border-radius: $radius-rounded
 
 .pagination,
 .pagination-list
@@ -52,8 +60,8 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($black, 0.2)
   padding-right: 0.5em
   justify-content: center
   margin: 0.25rem
-  text-align: center
-
+  text-align: center 
+    
 .pagination-previous,
 .pagination-next,
 .pagination-link
