Fix rounded tabs

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -7406,20 +7406,8 @@ label.panel-block:hover {
   border-radius: 3px 0 0 3px;
 }
 
-.tabs.is-toggle li:first-child a.is-rounded {
-  border-top-left-radius: 290486px;
-  border-bottom-left-radius: 290486px;
-  padding-left: 1.25em;
-}
-
 .tabs.is-toggle li:last-child a {
   border-radius: 0 3px 3px 0;
-}
-
-.tabs.is-toggle li:last-child a.is-rounded {
-  border-top-right-radius: 290486px;
-  border-bottom-right-radius: 290486px;
-  padding-right: 1.25em;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -7431,6 +7419,18 @@ label.panel-block:hover {
 
 .tabs.is-toggle ul {
   border-bottom: none;
+}
+
+.tabs.is-toggle.is-toggle-rounded li:first-child a {
+  border-bottom-left-radius: 290486px;
+  border-top-left-radius: 290486px;
+  padding-left: 1.25em;
+}
+
+.tabs.is-toggle.is-toggle-rounded li:last-child a {
+  border-bottom-right-radius: 290486px;
+  border-top-right-radius: 290486px;
+  padding-right: 1.25em;
 }
 
 .tabs.is-small {
