--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -164,6 +164,37 @@ doc-subtab: tabs
 </div>
 {% endcapture %}
 
+{% capture tabs_toggle_rounded_example %}
+<div class="tabs is-toggle is-toggle-rounded">
+  <ul>
+    <li class="is-active">
+      <a>
+        <span class="icon is-small"><i class="fa fa-image"></i></span>
+        <span>Pictures</span>
+      </a>
+    </li>
+    <li>
+      <a>
+        <span class="icon is-small"><i class="fa fa-music"></i></span>
+        <span>Music</span>
+      </a>
+    </li>
+    <li>
+      <a>
+        <span class="icon is-small"><i class="fa fa-film"></i></span>
+        <span>Videos</span>
+      </a>
+    </li>
+    <li>
+      <a>
+        <span class="icon is-small"><i class="fa fa-file-text-o"></i></span>
+        <span>Documents</span>
+      </a>
+    </li>
+  </ul>
+</div>
+{% endcapture %}
+
 {% capture tabs_fullwidth_example %}
 <div class="tabs is-fullwidth">
   <ul>
@@ -384,6 +415,14 @@ doc-subtab: tabs
     </p>
 
     {% include snippet.html content=tabs_toggle_example horizontal=true more=true %}
+
+    {% include elements/new-tag.html version="0.6.2" %}
+
+    <p class="content">
+      If you use both <code>is-toggle</code> and <code>is-toggle-rounded</code>, the first and last items will be <strong>rounded</strong>.
+    </p>
+
+    {% include snippet.html content=tabs_toggle_rounded_example horizontal=true more=true %}
 
     <p class="content">
       If you want the tabs to take up the <strong>whole width</strong> available, use <code>is-fullwidth</code>.
