--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -122,16 +122,8 @@ $tabs-toggle-link-active-color: $link-invert !default
         margin-left: -#{$tabs-toggle-link-border-width}
       &:first-child a
         border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
-        &.is-rounded
-          border-top-left-radius: $radius-rounded
-          border-bottom-left-radius: $radius-rounded
-          padding-left: 1.25em
       &:last-child a
         border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
-        &.is-rounded
-          border-top-right-radius: $radius-rounded
-          border-bottom-right-radius: $radius-rounded
-          padding-right: 1.25em
       &.is-active
         a
           background-color: $tabs-toggle-link-active-background-color
@@ -140,6 +132,16 @@ $tabs-toggle-link-active-color: $link-invert !default
           z-index: 1
     ul
       border-bottom: none
+    &.is-toggle-rounded
+      li
+        &:first-child a
+          border-bottom-left-radius: $radius-rounded
+          border-top-left-radius: $radius-rounded
+          padding-left: 1.25em
+        &:last-child a
+          border-bottom-right-radius: $radius-rounded
+          border-top-right-radius: $radius-rounded
+          padding-right: 1.25em
   // Sizes
   &.is-small
     font-size: $size-small
