Fix form rounded

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -280,10 +280,6 @@ $help-size: $size-small !default
         border-radius: $file-radius
       .file-name
         display: none
-  &.is-centered
-    justify-content: center
-  &.is-right
-    justify-content: flex-end
   &.is-boxed
     .file-label
       flex-direction: column
@@ -313,27 +309,22 @@ $help-size: $size-small !default
       .file-name
         border-radius: 0 0 $file-radius $file-radius
         border-width: 0 1px 1px
-  &.is-right
-    .file-cta
-      &:not(.is-rounded)
-        border-radius: 0 $file-radius $file-radius 0
-      &.is-rounded
-        border-bottom-right-radius: $radius-rounded
-        border-top-right-radius: $radius-rounded
-    .file-name
-      border-width: 1px 0 1px 1px
-      order: -1
-      &:not(.is-rounded)
-        border-radius: $file-radius 0 0 $file-radius
-      &.is-rounded
-        border-bottom-left-radius: $radius-rounded
-        border-top-left-radius: $radius-rounded
+  &.is-centered
+    justify-content: center
   &.is-fullwidth
     .file-label
       width: 100%
     .file-name
       flex-grow: 1
       max-width: none
+  &.is-right
+    justify-content: flex-end
+    .file-cta
+      border-radius: 0 $file-radius $file-radius 0
+    .file-name
+      border-radius: $file-radius 0 0 $file-radius
+      border-width: 1px 0 1px 1px
+      order: -1
 
 .file-label
   align-items: stretch
@@ -372,8 +363,6 @@ $help-size: $size-small !default
   padding-left: 1em
   padding-right: 1em
   white-space: nowrap
-  &.is-rounded
-    border-radius: $radius-rounded
 
 .file-cta
   background-color: $file-cta-background-color
@@ -435,34 +424,26 @@ $help-size: $size-small !default
     .control
       &:not(:last-child)
         margin-right: -1px
+      &:not(:first-child):not(:last-child)
+        .button,
+        .input,
+        .select select
+          border-radius: 0
       &:first-child
         .button,
         .input,
-        .select
-          &:not(.is-rounded)
-            select
-              border-bottom-left-radius: $input-radius
-              border-top-left-radius: $input-radius
-          &.is-rounded
-            select
-              border-bottom-left-radius: $radius-rounded
-              border-top-left-radius: $radius-rounded
+        .select select
+          border-bottom-right-radius: 0
+          border-top-right-radius: 0
       &:last-child
         .button,
         .input,
-        .select
-          &:not(.is-rounded)
-            select
-              border-bottom-right-radius: $input-radius
-              border-top-right-radius: $input-radius
-          &.is-rounded
-            select
-              border-bottom-right-radius: $radius-rounded
-              border-top-right-radius: $radius-rounded
+        .select select
+          border-bottom-left-radius: 0
+          border-top-left-radius: 0
       .button,
       .input,
       .select select
-        border-radius: 0
         &:hover,
         &.is-hovered
           z-index: 2
