.box .is-small .is-rounded

--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -3,6 +3,7 @@ $box-background-color: $white !default
 $box-radius: $radius-large !default
 $box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
 $box-padding: 1.25rem !default
+$box-padding-small: 0.5rem !default
 
 $box-link-hover-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $link !default
 $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link !default
@@ -15,7 +16,11 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link !def
   color: $box-color
   display: block
   padding: $box-padding
-
+  &.is-small
+    padding: $box-padding-small
+  &.is-rounded
+    border-radius: $radius-rounded
+    
 a.box
   &:hover,
   &:focus
