Remove obsolete $container-offset variable from documentation

--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -57,17 +57,17 @@ doc-subtab: container
         <li><code>.footer</code></li>
       </ul>
       <p>
-        The container <strong>breakpoints</strong> have an <strong>offset</strong> defined by the <code>$container-offset</code> variable. It has a default value of <code>60px</code>.
+        The containers maximum width for each breakpoint is the result of: <code>$device</code> - (2 * <code>$gap</code>).
+      </p>
+      <p>
+        The <code>$gap</code> variable has a default value of <code>32px</code> but can be modified.
       </p>
       <p>This is how the container will behave:</p>
       <ul>
-        <li>on <code>$desktop</code> + <code>$container-offset</code> = <code>>= 1068px</code> it will have a maximum width of <strong>960px</strong> and will be <strong>horizontally centered</strong>.</li>
-        <li>on <code>$widescreen</code> + <code>$container-offset</code> = <code>>= 1260px</code> it will have a maximum width of <strong>1152px</strong>.</li>
-        <li>on <code>$fullhd</code> + <code>$container-offset</code> = <code>>= 1452px</code> it will have a maximum width of <strong>1344px</strong>.</li>
+        <li>on <code>$desktop</code> it will have a maximum width of <strong>960px</strong>.</li>
+        <li>on <code>$widescreen</code> it will have a maximum width of <strong>1152px</strong>.</li>
+        <li>on <code>$fullhd</code> it will have a maximum width of <strong>1344px</strong>.</li>
       </ul>
-      <p>
-        The <code>$gap</code> variable has a default value of <code>24px</code> but can be modified.
-      </p>
       <p>The values <strong>960</strong>, <strong>1152</strong> and <strong>1344</strong> have been chosen because they are divisible by both <strong>12</strong> and <strong>16</strong>.</p>
     </div>
   </div>
