--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -16,7 +16,8 @@ doc-subtab: container
 {% capture container_fluid_example %}
 <div class="container is-fluid">
   <div class="notification">
-    This container is <strong>fluid</strong>: it will have a 24px gap on either side, on any viewport size.
+    This container is <strong>fluid</strong>: it will have a 32px gap on either side, on any
+    viewport size.
   </div>
 </div>
 {% endcapture %}
@@ -57,10 +58,9 @@ doc-subtab: container
         <li><code>.footer</code></li>
       </ul>
       <p>
-        The containers maximum width for each breakpoint is the result of: <code>$device</code> - (2 * <code>$gap</code>).
-      </p>
-      <p>
-        The <code>$gap</code> variable has a default value of <code>32px</code> but can be modified.
+        The containers <strong>width</strong> for each <strong>breakpoint</strong> is the result
+        of: <code>$device - (2 * $gap)</code>. The <code>$gap</code> variable has a default value of <code>
+        32px</code> but can be modified.
       </p>
       <p>This is how the container will behave:</p>
       <ul>
@@ -83,7 +83,8 @@ doc-subtab: container
 <div class="container">
   <h3 class="title is-4">Fluid container</h3>
   <div class="content">
-    <p>If you don't want to have a maximum width but want to keep the 24px margin on the left and right sides, add the <code>is-fluid</code> modifier:</p>
+    <p>If you don't want to have a maximum width but want to keep the 32px margin on the left and
+       right sides, add the <code>is-fluid</code> modifier:</p>
   </div>
 </div>
 </section>
