--- a/bulma.scss
+++ b/bulma.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
 /*! bulma.io v0.6.1 | MIT License | github.com/jgthms/bulma */
-@import "sass/utilities/_all";
-@import "sass/base/_all";
-@import "sass/elements/_all";
-@import "sass/components/_all";
-@import "sass/grid/_all";
-@import "sass/layout/_all";
+@import "scss/utilities/_all";
+@import "scss/base/_all";
+@import "scss/elements/_all";
+@import "scss/components/_all";
+@import "scss/grid/_all";
+@import "scss/layout/_all";
