@import "range.sass"

--- a/sass/elements/_all.sass
+++ b/sass/elements/_all.sass
@@ -9,6 +9,7 @@
 @import "image.sass"
 @import "notification.sass"
 @import "progress.sass"
+@import "range.sass"
 @import "table.sass"
 @import "tag.sass"
 @import "title.sass"
