--- a/docs/_includes/sponsors.html
+++ b/docs/_includes/sponsors.html
@@ -11,6 +11,9 @@
             <a href="http://bestcss.in/" target="_blank">
               <img src="{{ site.url }}/images/sponsors/bestcss.png" alt="bestcss logo">
             </a>
+            <a href="https://nazar.io/" target="_blank">
+              <img src="{{ site.url }}/images/sponsors/nazar.png" alt="nazar logo">
+            </a>
           </div>
         </div>
       </div>
