--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4370,6 +4370,7 @@ a.box:active {
   position: absolute !important;
   right: 0.625em;
   top: 0.625em;
+  z-index: 4;
 }
 
 .control.is-loading.is-small:after {
@@ -6247,7 +6248,7 @@ a.dropdown-item.is-active {
           justify-content: center;
   overflow: hidden;
   position: fixed;
-  z-index: 20;
+  z-index: 40;
 }
 
 .modal.is-active {
@@ -13361,6 +13362,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-right: 3rem;
   width: 150px;
 }
 
