--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -176,6 +176,12 @@
   -ms-user-select: none
   user-select: none
 
+=parallax
+  background-attachment: fixed
+  background-position: center
+  background-repeat: no-repeat
+  background-size: cover
+
 // Responsiveness
 
 =from($device)
