--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -2,12 +2,23 @@ $section-padding: 3rem 1.5rem !default
 $section-padding-medium: 9rem 1.5rem !default
 $section-padding-large: 18rem 1.5rem !default
 
+$section-parallax-min-height: 20rem !default
+$section-parallax-min-height-medium: 35rem !default
+$section-parallax-min-height-large: 50rem !default
+
 .section
   padding: $section-padding
+  &.is-parallax
+    +parallax
+    min-height: $section-parallax-min-height
   // Responsiveness
   +desktop
     // Sizes
     &.is-medium
       padding: $section-padding-medium
+      &.is-parallax
+        min-height: $section-parallax-min-height-medium
     &.is-large
       padding: $section-padding-large
+      &.is-parallax
+        min-height: $section-parallax-min-height-large
