[UPDATE] Replaced Height of Hamburger Mixin to be 100% instead of Dimension Variable since Navbar

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -109,7 +109,7 @@
 =hamburger($dimensions)
   cursor: pointer
   display: block
-  height: $dimensions
+  height: 100%
   position: relative
   width: $dimensions
   span
