[Update] Switched height concept from 100% to auto

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -109,7 +109,7 @@
 =hamburger($dimensions)
   cursor: pointer
   display: block
-  height: 100%
+  height: auto
   position: relative
   width: $dimensions
   span
