[Correction] Fixed Failing Travis CI Test

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -156,8 +156,8 @@
         top: calc(50% + 0.35rem)
 
   &.is-large
-    width: $dimensions * 2;
-    height: $dimensions * 2;
+    width: $dimensions * 2
+    height: $dimensions * 2
     span
       width: 2rem
       &:nth-child(1)
