--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -24,7 +24,7 @@ doc-subtab: navbar
   <span></span>
   <span></span>
   <span></span>
-</button>
+</div>
 {% endcapture %}
 
 {% capture navbar_brand_items_example %}
@@ -38,7 +38,7 @@ doc-subtab: navbar
       <span></span>
       <span></span>
       <span></span>
-    </button>
+    </div>
   </div>
 </nav>
 {% endcapture %}
@@ -482,7 +482,7 @@ doc-subtab: navbar
   <span></span>
   <span></span>
   <span></span>
-</button>
+</div>
 
 <div class="navbar-menu" id="navMenu">
   <!-- navbar-start, navbar-end... -->
