Fixes #1580: Remove border radius from 'navbar-burger'

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -131,6 +131,7 @@ html.has-navbar-fixed-bottom
 .navbar-burger
   +hamburger($navbar-height)
   margin-left: auto
+  border-radius: 0px
 
 .navbar-menu
   display: none
