--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -83,7 +83,7 @@ doc-subtab: container
 <div class="container">
   <h3 class="title is-4">Fluid container</h3>
   <div class="content">
-    <p>If you don't want to have a maximum width but want to keep the 32px margin on the left and
+    <p>If you want a container that fills the width of the viewport while keeping 32px margin on the left and
        right sides, add the <code>is-fluid</code> modifier:</p>
   </div>
 </div>
@@ -100,7 +100,7 @@ doc-subtab: container
   <h3 class="title is-4">Breakpoint containers</h3>
   <div class="content">
     <p>
-      With the two modifiers <code>.is-widescreen</code> and <code>.is-fullhd</code>, you can have a <em>fullwidth</em> container <strong>until</strong> those specific breakpoints.
+      Modifiers <code>.is-widescreen</code> and <code>.is-fullhd</code> modifiers, container will be <em>fullwidth</em> <strong>until</strong> those specific breakpoints.
     </p>
   </div>
 </div>
