--- a/docs/_includes/sponsors.html
+++ b/docs/_includes/sponsors.html
@@ -8,8 +8,8 @@
 
         <div class="column is-8">
           <div class="bd-sponsors">
-            <a href="http://bestcss.in/" target="_blank">
-              <img src="{{ site.url }}/images/sponsors/bestcss.png" alt="bestcss logo">
+            <a href="http://9brainz.com/new/" target="_blank">
+              <img src="{{ site.url }}/images/sponsors/9brainz.png" alt="9brainz logo">
             </a>
             <a href="https://nazar.io/" target="_blank">
               <img src="{{ site.url }}/images/sponsors/nazar.png" alt="nazar logo">
