Fix #1590 - Reset styles for figure.highlight
Fix #1590 - Reset styles for figure.highlight code blocks

--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -86,9 +86,10 @@ $content-table-foot-cell-color: $text-strong !default
   dd
     margin-left: 2em
   figure
-    margin-left: 2em
-    margin-right: 2em
-    text-align: center
+    &:not(.highlight)
+      margin-left: 2em
+      margin-right: 2em
+      text-align: center
     &:not(:first-child)
       margin-top: 2em
     &:not(:last-child)
