--- a/docs/_includes/patreon.html
+++ b/docs/_includes/patreon.html
@@ -1,8 +1,8 @@
-<div class="bd-patreon">
-  <p class="bd-patreon-text">
+<div class="bd-banner is-patreon">
+  <p class="bd-banner-text">
     <strong>Support Bulma</strong> on Patreon
   </p>
-  <a class="bd-patreon-button" href="https://www.patreon.com/jgthms" target="_blank">
+  <a class="bd-banner-button" href="https://www.patreon.com/jgthms" target="_blank">
     <img src="/images/patreon.png" alt="Become a patron">
   </a>
 </div>
