--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -5,6 +5,7 @@ $github: #333333
 $twitter: #55acee
 $patreon: #f96854
 $patreon-blue: #052d49
+$fortyfour: #5f45bb
 
 @import "../bulma"
 @import "./_sass/highlight"
