--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -174,6 +174,19 @@
       <div class="navbar-item">
         <div class="field is-grouped">
           <p class="control">
+            <a href="https://www.patreon.com/jgthms" target="_blank" style="display: block;">
+              <img
+                style="display: block; max-height: 36px;"
+                src="/images/become_a_patron_button.png"
+                width="153"
+                height="36"
+                srcset="/images/become_a_patron_button@3x.png 3x,
+                        /images/become_a_patron_button@2x.png 2x,
+                        /images/become_a_patron_button.png 1x"
+                alt="Become a patron">
+            </a>
+          </p>
+          <p class="control">
             {% include elements/tw-button.html label="Tweet" %}
           </p>
           <p class="control">
@@ -192,4 +205,4 @@
   </div>
 </nav>
 
-{% include patreon.html %}
+{% include fortyfour.html %}
