--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -141,6 +141,10 @@
   margin-right: 0.5em
   margin-top: 2px
 
+.bd-emoji-bis
+  font-size: 1.25em
+  vertical-align: middle
+
 $notification-background-color: $background !default
 $notification-radius: $radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
