Use Font Awesome 5

--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -13,7 +13,7 @@
           </p>
           <a class="button bd-is-rss" href="{{ site.url }}/atom.xml">
             <span class="icon">
-              <i class="fa fa-rss"></i>
+              <i class="fas fa-rss"></i>
             </span>
             <span>Subscribe</span>
           </a>
