--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -19,7 +19,7 @@
                 <div class="control has-icons-left is-expanded">
                   <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required>
                   <span class="icon is-small is-left">
-                    <i class="fa fa-envelope"></i>
+                    <i class="fas fa-envelope"></i>
                   </span>
                 </div>
                 <div class="control">
