--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -12,7 +12,7 @@ route: blog
         <div class="bd-article-image is-single is-{{ page.color }}">
           <span class="bd-article-overlay"></span>
           <span class="bd-article-icon">
-            <i class="fa fa-{{ page.icon }}"></i>
+            <i class="{% if page.icon_brand %}fab{% else %}fas{% endif %} fa-{{ page.icon }}"></i>
           </span>
           <strong class="bd-article-info">
             <span>
