--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -44,7 +44,7 @@ doc-subtab: card
     </p>
     <a href="#" class="card-header-icon" aria-label="more options">
       <span class="icon">
-        <i class="fa fa-angle-down" aria-hidden="true"></i>
+        <i class="fas fa-angle-down" aria-hidden="true"></i>
       </span>
     </a>
   </header>
