--- a/docs/documentation/components/nav.html
+++ b/docs/documentation/components/nav.html
@@ -66,7 +66,7 @@ doc-subtab: nav
     </a>
     <a class="nav-item">
       <span class="icon">
-        <i class="fa fa-twitter"></i>
+        <i class="fab fa-twitter"></i>
       </span>
     </a>
   </div>
@@ -97,7 +97,7 @@ doc-subtab: nav
         <p class="control">
           <a class="button" >
             <span class="icon">
-              <i class="fa fa-twitter"></i>
+              <i class="fab fa-twitter"></i>
             </span>
             <span>Tweet</span>
           </a>
@@ -105,7 +105,7 @@ doc-subtab: nav
         <p class="control">
           <a class="button is-primary">
             <span class="icon">
-              <i class="fa fa-download"></i>
+              <i class="fas fa-download"></i>
             </span>
             <span>Download</span>
           </a>
