--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -6,15 +6,17 @@
 
   <title>{% if page.fulltitle %}{{ page.fulltitle }}{% else %}{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}{% endif %}</title>
 
-  <link rel="stylesheet" href="{{ site.fontawesome }}">
+  {% if page.fontawesome4 %}
+    <link rel="stylesheet" href="{{ site.data.icons.fontawesome4 }}">
+  {% endif %}
   {% if page.iconic %}
-    <link rel="stylesheet" href="{{ site.iconic }}">
+    <link rel="stylesheet" href="{{ site.data.icons.iconic }}">
   {% endif %}
   {% if page.ionicons %}
-    <link rel="stylesheet" href="{{ site.ionicons }}">
+    <link rel="stylesheet" href="{{ site.data.icons.ionicons }}">
   {% endif %}
   {% if page.mdi %}
-    <link rel="stylesheet" href="{{ site.mdi }}">
+    <link rel="stylesheet" href="{{ site.data.icons.mdi }}">
   {% endif %}
   <link rel="stylesheet" href="{{ site.url }}/css/bulma-docs.css?v={{ site.time | date: "%Y%m%d%H%M" }}">
 
@@ -45,4 +47,6 @@
   <link rel="shortcut icon" href="{{site.url}}/favicons/favicon.ico?v=201701041855">
   <meta name="msapplication-config" content="{{site.url}}/favicons/browserconfig.xml?v=201701041855">
   <meta name="theme-color" content="#00d1b2">
+
+  <script defer src="{{ site.data.icons.fontawesome5 }}"></script>
 </head>
