--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -10,13 +10,13 @@
 
     <a class="navbar-item is-hidden-desktop" href="{{ site.github }}" target="_blank">
       <span class="icon" style="color: #333;">
-        <i class="fa fa-lg fa-github"></i>
+        <i class="fab fa-lg fa-github"></i>
       </span>
     </a>
 
     <a class="navbar-item is-hidden-desktop" href="{{ site.twitter }}" target="_blank">
       <span class="icon" style="color: #55acee;">
-        <i class="fa fa-lg fa-twitter"></i>
+        <i class="fab fa-lg fa-twitter"></i>
       </span>
     </a>
 
@@ -101,7 +101,7 @@
                   <div class="level-item">
                     <a class="button bd-is-rss is-small" href="{{ site.url }}/atom.xml">
                       <span class="icon is-small">
-                        <i class="fa fa-rss"></i>
+                        <i class="fas fa-rss"></i>
                       </span>
                       <span>Subscribe</span>
                     </a>
@@ -163,12 +163,12 @@
     <div class="navbar-end">
       <a class="navbar-item is-hidden-desktop-only" href="{{ site.github }}" target="_blank">
         <span class="icon" style="color: #333;">
-          <i class="fa fa-lg fa-github"></i>
+          <i class="fab fa-lg fa-github"></i>
         </span>
       </a>
       <a class="navbar-item is-hidden-desktop-only" href="{{ site.twitter }}" target="_blank">
         <span class="icon" style="color: #55acee;">
-          <i class="fa fa-lg fa-twitter"></i>
+          <i class="fab fa-lg fa-twitter"></i>
         </span>
       </a>
       <div class="navbar-item">
@@ -192,7 +192,7 @@
           <p class="control">
             <a class="button is-primary" href="{{ site.download }}">
               <span class="icon">
-                <i class="fa fa-download"></i>
+                <i class="fas fa-download"></i>
               </span>
               <span>Download</span>
             </a>
