Update icons docs with Font Awesome 5

--- a/docs/documentation/components/nav.html
+++ b/docs/documentation/components/nav.html
@@ -61,7 +61,7 @@ doc-subtab: nav
   <div class="nav-center">
     <a class="nav-item">
       <span class="icon">
-        <i class="fa fa-github"></i>
+        <i class="fab fa-github"></i>
       </span>
     </a>
     <a class="nav-item">
