Add Horizontal Card

--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -65,3 +65,27 @@ $card-footer-border-top: 1px solid $border !default
 .card
   .media:not(:last-child)
     margin-bottom: 0.75rem
+
+  &.is-horizontal
+    flex-direction: row
+    display: flex
+    flex-basis: 50ex
+    flex-grow: 0
+    flex-shrink: 1
+    .card-image
+      flex: 2
+      flex-shrink: 2
+      .image
+        display: block
+        position: relative
+        overflow: hidden
+        height: 100%
+        width: 100%
+        img
+          height: 100%
+          object-fit: cover
+          object-position: center
+
+    .card-content
+      flex: 3
+      flex-shrink: 3
