--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -172,7 +172,7 @@
         </span>
       </a>
       <div class="navbar-item">
-        <div class="field is-grouped">
+        <div class="field is-grouped is-grouped-multiline">
           <p class="control">
             <a href="https://www.patreon.com/jgthms" target="_blank" style="display: block;">
               <img
