--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11446,6 +11446,14 @@ svg {
   color: white;
 }
 
+#moreDropdownBootstrap .icon {
+  color: #6f5499;
+}
+
+#moreDropdownPatreon .icon {
+  color: #f96854;
+}
+
 @media screen and (min-width: 1024px) {
   #blogDropdown {
     width: 17rem;
@@ -11454,10 +11462,11 @@ svg {
     white-space: normal;
   }
   #moreDropdown {
-    width: 16rem;
+    width: 18rem;
   }
   #moreDropdown .navbar-item {
     padding-right: 1rem;
+    white-space: normal;
   }
   #moreDropdown .navbar-item .level {
     -webkit-box-flex: 1;
