--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -117,36 +117,89 @@
           More
         </div>
         <div id="moreDropdown" class="navbar-dropdown {% if include.boxed %}is-boxed{% endif %}">
-          <a class="navbar-item {% if page.route == 'backers' %}is-active{% endif %}" href="{{ site.url }}/backers/">
-            <p>
-              <strong>Patreon backers</strong>
-              <br>
-              <small>Everyone who is supporting Bulma</small>
-            </p>
-          </a>
-          <hr class="navbar-divider">
           <a class="navbar-item {% if page.route == 'bulma-start' %}is-active{% endif %}" href="{{ site.url }}/bulma-start/">
-            <p>
-              <strong>Bulma start</strong>
-              <br>
-              <small>A tiny npm package to get started</small>
-            </p>
+            <div class="media">
+              <div class="media-left">
+                <span class="icon is-large has-text-success">
+                  <i class="fas fa-rocket fa-2x"></i>
+                </span>
+              </div>
+              <div class="media-content">
+                <p>
+                  <strong>Bulma start</strong>
+                  <br>
+                  <small>A tiny npm package to get started</small>
+                </p>
+              </div>
+            </div>
           </a>
           <hr class="navbar-divider">
           <a class="navbar-item {% if page.route == 'made-with-bulma' %}is-active{% endif %}" href="{{ site.url }}/made-with-bulma/">
-            <p>
-              <strong>Made with Bulma</strong>
-              <br>
-              <small>The official community badge</small>
-            </p>
+            <div class="media">
+              <div class="media-left">
+                <span class="icon is-large has-text-primary">
+                  <i class="fas fa-certificate fa-2x"></i>
+                </span>
+              </div>
+              <div class="media-content">
+                <p>
+                  <strong>Made with Bulma</strong>
+                  <br>
+                  <small>The official community badge</small>
+                </p>
+              </div>
+            </div>
+          </a>
+          <hr class="navbar-divider">
+          <a id="moreDropdownBootstrap" class="navbar-item {% if page.route == 'backers' %}is-active{% endif %}" href="{{ site.url }}/alternative-to-bootstrap/">
+            <div class="media">
+              <div class="media-left">
+                <span class="icon is-large">
+                  <i class="fas fa-exchange-alt fa-2x"></i>
+                </span>
+              </div>
+              <div class="media-content">
+                <p>
+                  <strong>Coming from Bootstrap</strong>
+                  <br>
+                  <small>See how Bulma is an alternative to Bootstrap</small>
+                </p>
+              </div>
+            </div>
+          </a>
+          <hr class="navbar-divider">
+          <a id="moreDropdownPatreon" class="navbar-item {% if page.route == 'backers' %}is-active{% endif %}" href="{{ site.url }}/backers/">
+            <div class="media">
+              <div class="media-left">
+                <span class="icon is-large">
+                  <i class="fab fa-patreon fa-2x"></i>
+                </span>
+              </div>
+              <div class="media-content">
+                <p>
+                  <strong>Patreon backers</strong>
+                  <br>
+                  <small>Everyone who is supporting Bulma</small>
+                </p>
+              </div>
+            </div>
           </a>
           <hr class="navbar-divider">
           <a class="navbar-item {% if page.route == 'extensions' %}is-active{% endif %}" href="{{ site.url }}/extensions/">
-            <p>
-              <strong>Extensions</strong>
-              <br>
-              <small>Side projects to enhance Bulma</small>
-            </p>
+            <div class="media">
+              <div class="media-left">
+                <span class="icon is-large has-text-danger">
+                  <i class="fas fa-plug fa-2x"></i>
+                </span>
+              </div>
+              <div class="media-content">
+                <p>
+                  <strong>Extensions</strong>
+                  <br>
+                  <small>Side projects to enhance Bulma</small>
+                </p>
+              </div>
+            </div>
           </a>
         </div>
       </div>
