--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -37,6 +37,14 @@ route: blog
         <div class="content is-medium">
           {{ content }}
         </div>
+        <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+          {% if page.previous.url %}
+            <a class="pagination-previous" href="{{ page.previous.url }}">Previous post</a>
+          {% endif %}
+          {% if page.next.url %}
+            <a class="pagination-next" href="{{ page.next.url }}">Next post</a>
+          {% endif %}
+        </nav>
       </div>
     </div>
   </div>
