--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11775,6 +11775,12 @@ svg {
   width: 100%;
 }
 
+.bd-article-image.is-share {
+  height: 315px;
+  margin: 2rem auto;
+  width: 600px;
+}
+
 .bd-article-overlay {
   bottom: 0;
   left: 0;
