--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -58,8 +58,8 @@
     <meta property="og:image" content="{{ site.url }}{{ page.share_image }}">
     <meta name="twitter:image" content="{{ site.url }}{{ page.share_image }}">
   {% elsif page.layout == 'post' %}
-    <meta property="og:image" content="{{ site.url }}/images/blog/share/{{ page.id | slice: 12,page.id.size }}.png">
-    <meta name="twitter:image" content="{{ site.url }}/images/blog/share/{{ page.id | slice: 12,page.id.size }}.png">
+    <meta property="og:image" content="{{ site.url }}/images/blog/share/{{ page.id | slice: 12,page.id.size }}.jpg">
+    <meta name="twitter:image" content="{{ site.url }}/images/blog/share/{{ page.id | slice: 12,page.id.size }}.jpg">
   {% else %}
     <meta property="og:image" content="{{ site.url }}/images/bulma-banner.png">
     <meta name="twitter:image" content="{{ site.url }}/images/bulma-banner.png">
