--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -8670,12 +8670,21 @@ label.panel-block:hover {
   --columnGap: 2rem;
 }
 
+.grid-container {
+  box-shadow: 0 0 0 1px #7a7a7a;
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 0 !important;
+}
+
 .grid {
+  --gridGap: 0.75rem;
+  --gridGap: 0;
+  --gridColumnGap: var(--gridGap);
+  --gridRowGap: var(--gridGap);
   display: grid;
-  grid-column-gap: 0.75rem;
-  grid-column-gap: 1px;
-  grid-row-gap: 0.75rem;
-  grid-row-gap: 1px;
+  grid-column-gap: var(--gridColumnGap);
+  grid-row-gap: var(--gridRowGap);
 }
 
 .grid:not(:last-child) {
@@ -8709,24 +8718,48 @@ label.panel-block:hover {
   padding: 1rem;
 }
 
+.cell.is-1-tall {
+  grid-row: span 1;
+}
+
 .cell.is-1-wide {
   grid-column: span 1;
+}
+
+.cell.is-2-tall {
+  grid-row: span 2;
 }
 
 .cell.is-2-wide {
   grid-column: span 2;
 }
 
+.cell.is-3-tall {
+  grid-row: span 3;
+}
+
 .cell.is-3-wide {
   grid-column: span 3;
+}
+
+.cell.is-4-tall {
+  grid-row: span 4;
 }
 
 .cell.is-4-wide {
   grid-column: span 4;
 }
 
+.cell.is-5-tall {
+  grid-row: span 5;
+}
+
 .cell.is-5-wide {
   grid-column: span 5;
+}
+
+.cell.is-6-tall {
+  grid-row: span 6;
 }
 
 .cell.is-6-wide {
